--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </select>
 
     <div id="table-container"></div>
+    <script src="js/papaparse.js"></script>
     <script src="js/papaparse.min.js"></script>
     <script src="js/script.js"></script>
 </body>
