--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
 </head>
 
 <body>
-    <h1>Select a Weapon Type:</h1>
-    <select id="weapon-type">
-        <option value="blank"></option>
-        <option value="assault-carbine">Assault-Carbine</option>
-        <option value="pdw-smg">PDW-SMG</option>
-        <option value="lsg-lmg">LSG-LMG</option>
-        <option value="dmr-sniper">DMR-Sniper</option>
-        <option value="pistols">Pistol-Auto Pistol-Heavy Pistol</option>
-    </select>
-
-    <div id="table-container"></div>
+    <section>
+        <h1>Select a Weapon Type:</h1>
+        <select id="weapon-type">
+            <option value="blank"></option>
+            <option value="assault-carbine">Assault-Carbine</option>
+            <option value="pdw-smg">PDW-SMG</option>
+            <option value="lsg-lmg">LSG-LMG</option>
+            <option value="dmr-sniper">DMR-Sniper</option>
+            <option value="pistols">Pistol-Auto Pistol-Heavy Pistol</option>
+        </select>
+    </section>
+    <section>
+        <div id="table-container"></div>
+    </section>
     <script src="js/papaparse.js"></script>
     <script src="js/papaparse.min.js"></script>
     <script src="js/script.js"></script>
